--- a/TicTacToe/TicTacToe.html
+++ b/TicTacToe/TicTacToe.html
@@ -3,7 +3,6 @@
     <meta charset="utf-8">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
   </head>
   <body>
     <section class="wrapper">
@@ -26,9 +25,12 @@
       <div data-index="7" class="cell"></div>
       <div data-index="8" class="cell"></div>
   	</div>
+    <div class="game-status"></div>
     <div id="results"></div>
-    <div id="restart" class="game--restart"></div>
+    <button class="game-restart">Restart Game</button>
     </section>
 
+    
+    <script src="script.js"></script>
   </body>
 </html>
