--- a/TicTacToeCpu/TicTacToe.html
+++ b/TicTacToeCpu/TicTacToe.html
@@ -1,4 +1,4 @@
-<html>
+<!-- //CPU VS Player<html> -->
   <head>
     <meta charset="utf-8">
     <title>Tic-Tac-Toe</title>
@@ -7,15 +7,11 @@
   <body>
     <section class="wrapper">
   	<h1>Tic-Tac-Toe</h1>
-  
+  <p>Cpu : O  You: X</p>
   	<div id="grid">
       <div data-index="0" class="cell"></div>
-      <div data-index="1" class="cell">
-
-      </div>
-      <div data-index="2" class="cell">
-
-      </div>
+      <div data-index="1" class="cell"></div>
+      <div data-index="2" class="cell"></div>
 
       <div data-index="3" class="cell"></div>
       <div data-index="4" class="cell"></div>
@@ -25,9 +21,11 @@
       <div data-index="7" class="cell"></div>
       <div data-index="8" class="cell"></div>
   	</div>
-    <div class="game-status"></div>
-    <div id="results"></div>
+    <div class="status-bar">
+    <!-- <div class="game-status"></div> -->
+    <div class="result" id="results"></div>
     <button class="game-restart">Restart Game</button>
+  </div>
     </section>
 
     
